syntax = "proto3";
package myfirstmicro;
option go_package = "proto;mymicro";

service Hello {
    rpc MyHelloService (HelloReq) returns (HelloRes) ;
}

message HelloReq { 
    string Name = 1;
}

message HelloRes {
    string ResName = 1 ;
}
